# rbw

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml
.github/workflows/: homebrew-bump.yaml  release.yaml  tests.yaml
packaging/: SIGNING.md
packaging/homebrew/: README.md  bwx-cli.rb
scripts/: install.sh  sign-macos.sh
src/: actions.rs  api.rs  cipherstring.rs  config.rs  db.rs  dirs.rs  edit.rs  error.rs  identity.rs  json.rs  lib.rs  locked.rs  logger.rs  pinentry.rs  pinentry_native.rs  protocol.rs  totp.rs  uuid.rs
src/touchid/: blob.rs  keychain.rs  mod.rs
tests/: e2e.rs
tests/common/: api.rs  harness.rs  mod.rs  server.rs
tests/scenarios/: add_list_get.rs  agent_lifecycle.rs  code_non_totp_errors.rs  concurrent_get.rs  config.rs  config_rejects_invalid_values.rs  db_file_is_encrypted.rs  edit_remove.rs  external_create_then_sync.rs  file_permissions.rs  folders.rs  generate_and_sync.rs  get_by_uuid.rs  get_field.rs  help_and_version.rs  history.rs  lock_cycle.rs  long_notes_roundtrip.rs  mod.rs  multiple_entries.rs  profile_isolation.rs  purge_and_sync.rs  raw_output.rs  smoke.rs  special_chars_in_name.rs  ssh_agent.rs  ssh_confirm_sign.rs  ssh_public_key.rs  ssh_sshsig_spike.rs  totp_code.rs  touchid_gate.rs  unicode_roundtrip.rs  uri_matching.rs  wrong_password.rs
